# port-daddy

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  features.manifest.json  jest.config.js  mcp-server.json  package-lock.json  package.json  pd_logo.svg.bak  pd_logo_darkmode.svg.bak  port-daddy-distribution-analysis.md  port-daddy-distribution-strategy.md  port-daddy-v3.5-execution-plan.md  port-daddy-website-refresh-plan.md  server.js  server.ts  tsconfig.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  deploy-website.yml  publish.yml  release.yml
.serena/: project.yml
cli/: types.ts
cli/commands/: agents.ts  briefing.ts  changelog.ts  (+14 more)
completions/: port-daddy.bash  port-daddy.fish  port-daddy.zsh
core/pd-barnacle/: Cargo.toml
core/pd-barnacle/src/: main.rs
dashboard/: tui.tsx
docs/: sdk.md
lib/: activity.ts  agent-inbox.ts  agents.ts  barnacle-client.ts  briefing.ts  changelog.ts  client.ts  config.ts  db.ts  discover.ts  dns.ts  harbor-tokens.ts  harbors.ts  health.ts  identity.ts  locks.ts  maritime.ts  orchestrator.ts  projects.ts  resurrection.ts  services.ts  sessions.ts  tunnel.ts  utils.ts  webhooks.ts
mcp/: server.ts
public/: index.html
routes/: briefing.ts  changelog.ts  dns.ts  index.ts  info.ts  launch.ts  sessions.ts  tunnel.ts
screenshots/: design-mockups-extended.html  design-mockups.html
scripts/: check-parity.ts  sync-version.ts
shared/: port-utils.js  types.ts
tests/: setup-unit.js
website/: README.md  _redirects  index.html
website-v2/: index.html  package-lock.json  package.json
(+126 files in other folders)
